# rust-rocket-api-advance

./: .gitignore  Cargo.toml  Readme  diesel.toml  sample.Rocket.toml  sample.env
migrations/2024-08-10-060814_create_rustaceans/: up.sql
migrations/2024-08-10-060818_create_crates/: up.sql
migrations/2024-08-11-012004_create_users/: up.sql
migrations/2024-08-11-012008_create_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  models.rs  repositories.rs  schema.rs
src/routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
