[package]
name = "rocket-my-advance-practice"
default-run = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres", "deadpool_redis"] }
diesel = { version = "2.1", features = ["chrono", "postgres"] }
diesel-async = { version = "0.4", features = ["postgres"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap="4.4"
dotenv = "0.15.0"
argon2 = "0.5.3"
rand = "0.8"
tera= "1"
lettre = "0.11"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }